--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Quicksand" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,22 +19,25 @@
         <section class="background">
             <ul class="container-shoe-card">
                 <li class="shoe-cart" id="one">
-
-                    <article>
-                        <aside>Free shipping!</aside>
+                    <div class="image">
+                    </div>
+                    <article class="name-description-box">
                         <h1 class="brand-name">Asics</h1>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At autem, modi ea corrupti
-                            delectus vel</p>
+                        <p class="description">Suede fabric pointed toe stylish cut front low heel sharp on-trend toe
+                            point raised heel drop
+                            sides unique silhouette. Bow detail metallic eyelets leather lining luxurious finish classic
+                            courts formal slingback square...
+                        </p>
                     </article>
                     <div class=detail-box>
                         <p class="price">$65 USD</p>
                         <div class="selectors">
-                            <div class="size-selector">
-                                <p>Size: <select>6</select></p>
+                            <div class="selector-text">
+                                <p>Size: <select class="select-button">6</select></p>
 
                             </div>
-                            <div class="quantity-selector">
-                                <p>Quantity:<select>1</select> </p>
+                            <div class="selector-text">
+                                <p>Quantity: <select class="select-button">1</select> </p>
 
                             </div>
                         </div>
