added several styling for each column

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <main>
         <section class="background">
             <ul class="container-shoe-card">
-                <li class="shoe-cart" id="one">
-                    <div class="image">
+                <li class="shoe-cart">
+                    <div class="image-article-one">
+                        <aside class="free-shipping-badge">Free Shipping! </aside>
                     </div>
+
                     <article class="name-description-box">
                         <h1 class="brand-name">Asics</h1>
+
                         <p class="description">Suede fabric pointed toe stylish cut front low heel sharp on-trend toe
                             point raised heel drop
                             sides unique silhouette. Bow detail metallic eyelets leather lining luxurious finish classic
@@ -33,11 +36,11 @@
                         <p class="price">$65 USD</p>
                         <div class="selectors">
                             <div class="selector-text">
-                                <p>Size: <select class="select-button">6</select></p>
+                                <p>Size: <select class="select-button"></select></p>
 
                             </div>
                             <div class="selector-text">
-                                <p>Quantity: <select class="select-button">1</select> </p>
+                                <p>Quantity: <select class="select-button"></select> </p>
 
                             </div>
                         </div>
@@ -51,20 +54,72 @@
                     </div>
                 </li>
                 <li class="shoe-cart">
-                    <h1>Adidas</h1>
-                    <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas doloribus facere deleniti
-                        nisi
-                        facilis,
-                        porro debitis voluptatem, qui quas corporis incidunt, voluptatum provident quis unde! Fugit
-                        deleniti
+                    <div class="image-article-two"></div>
+                    <article class="name-description-box">
+                        <h1 class="brand-name">Adidas</h1>
+                        <p class="description">Suede fabric pointed toe stylish cut front low heel sharp on-trend
+                            toe
+                            point raised heel drop
+                            sides unique silhouette. Bow detail metallic eyelets leather lining luxurious finish
+                            classic
+                            courts formal slingback square...
+                        </p>
                     </article>
+                    <div class=detail-box>
+                        <p class="price">$30 USD</p>
+                        <div class="selectors">
+                            <div class="selector-text">
+                                <p>Size: <select class="select-button"></select></p>
+
+                            </div>
+                            <div class="selector-text">
+                                <p>Quantity: <select class="select-button"></select> </p>
+
+                            </div>
+                        </div>
+                        <div class="available-color">Color:
+                            <p class="circle" id="blue-and-black"></p>
+                            <p class="circle" id="green-and-black"></p>
+                            <p class="circle" id="pink-and-black"></p>
+
+                        </div>
+
+                        <button class="buy-now">Add to Cart</button>
+                    </div>
                 </li>
                 <li class="shoe-cart">
-                    <h1>New Balance</h1>
-                    <article>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In amet quos dolores magni,
-                        deleniti
-                        illum
+                    <div class="image-article-three">
+                        <aside class="free-shipping-badge">Just One Left! </aside>
+                    </div>
+                    <article class="name-description-box">
+                        <h1 class="brand-name">New Balance</h1>
+
+                        <p class="description">Suede fabric pointed toe stylish cut front low heel sharp on-trend toe
+                            point raised heel drop
+                            sides unique silhouette. Bow detail metallic eyelets leather lining luxurious finish classic
+                            courts formal slingback square...
+                        </p>
                     </article>
+                    <div class=detail-box>
+                        <p class="price">$45 USD</p>
+                        <div class="selectors">
+                            <div class="selector-text">
+                                <p>Size: <select class="select-button"></select></p>
+
+                            </div>
+                            <div class="selector-text">
+                                <p>Quantity: <select class="select-button"></select> </p>
+
+                            </div>
+                        </div>
+                        <div class="available-color">Color:
+                            <p class="circle" id="red-and-white"></p>
+                            <p class="circle" id="black-and-white"></p>
+
+                        </div>
+
+                        <button class="buy-now">Add to Cart</button>
+                    </div>
                 </li>
             </ul>
         </section>
